[project]
name = "pwndocapi"
version = "1.3.4"
description = "Python API client for PwnDoc"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Syslifters" }
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=1.8.0"
]

[project.scripts]
pwndoc-api="pwndoc_api.__main__:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
